MODIFY: 친구 관련 API 수정
1.테스트를 위한 일부 코드 추가(생성자, toString)
2.혼란을 유발하는 변수명 수정
3.네모두 추천 친구 닉네임 유무에 따른 로직 추가